<resources>
    <string name="app_name">Cash Control</string>
    <string name="user_name">Name...</string>
    <string name="user_password">Password...</string>
    <string name="log_in">log in</string>
    <string name="create_acc">create</string>
    <string name="add_item">Add Item</string>
    <string name="catalogs_title">Catalogs</string>
    <string name="catalog_dialog">New Catalog</string>
    <string name="start_date">Start Date</string>
    <string name="catalog_name">Name</string>
    <string name="receipts_title">Receipts</string>
    <string name="end_date">End Date</string>
    <string name="accept_button">accept</string>
    <string name="back_button">back</string>
    <string-array name="currency_array">
        <item>PLN</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string-array name="category_array">
        <item>Food</item>
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Bills</item>
        <item>Others</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_receipt">New Receipt</string>
    <string name="receipt_name">Receipt Name</string>
    <string name="date_edit">Date</string>
    <string name="price_edit">Price</string>
    <string name="select_all">Select All</string>
    <string name="sort_by_price">Sort By Price</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="select_biggest_price">Select Biggest Price</string>
    <string name="category_hint">Category...</string>
    <string name="sort_by_category">Sort By Category</string>
    <string name="select_category">Select Category</string>
    <string name="select_name">Select Name</string>
</resources>
